--- a/assets/scss/classic.scss
+++ b/assets/scss/classic.scss
@@ -182,3 +182,6 @@
     @apply flex justify-center p-3 cursor-pointer;
   }
 }
+.no-comments-holder {
+  @apply relative w-full h-48 flex items-center justify-center bg-white rounded shadow;
+}
