--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -177,5 +177,5 @@
   }
 }
 .no-comments-holder {
-  @apply relative w-full h-48 flex items-center justify-center bg-white rounded shadow;
+  @apply relative w-full h-48 flex items-center justify-center bg-white;
 }
